--- a/index.html
+++ b/index.html
@@ -4,53 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>J</title>
+    <title></title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jstat/1.9.1/jstat.min.js"></script>
-    Workin
-    <br>
     <input type="number" id="input" />
     <input type="number" id="input" />
     <br>
     <input type="number" id="input" />
     <input type="number" id="input" />
-
-
-    <!-- <script type="module">
-      // import { calculate } from './main.js';
-      
-      // document.querySelector('button').addEventListener('click', calculate);
-  </script> -->
 
   <br>
 
   <div id="inputContainer">
-    <!-- <input type="number"/>
-    <input type="number"/>
-    <br>
-    <input type="number"/>
-    <input type="number"/> -->
+    
   </div>
-
-  <button id="addButton">Add Input Box</button>
-  <!-- <script>
-    document.getElementById("addButton").addEventListener("click", function() {
-        var inputContainer = document.getElementById("inputContainer");
-
-        for (var i = 0; i < 4; i++) {
-            if (i%2 == 0) {
-                var br = document.createElement("br");
-                inputContainer.appendChild(br);
-            }
-            var newInput = document.createElement("input");
-            newInput.type = "number";
-            inputContainer.appendChild(newInput);
-    }});
-  </script> -->
-
-  <br>
-      <button id="calc">test</button>
+  <div class="controls">
+  <button id="addButton">+</button>
+  <button id="subButton">-</button>
+  <button id="calc">Calculate</button>
+  </div>
       <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
