Reset button + fixing gap
fix the gap plz

--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
   </head>
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jstat/1.9.1/jstat.min.js"></script>
-    <input type="number" id="input" />
-    <input type="number" id="input" />
-    <br>
-    <input type="number" id="input" />
-    <input type="number" id="input" />
+    <div>
 
-  <br>
+  </div>
 
   <div id="inputContainer">
-    
+    <input type="number"/>
+    <input type="number"/>
+    <br>
+    <input type="number"/>
+    <input type="number"/>
+  <br>
   </div>
   <div class="controls">
   <button id="addButton">+</button>
   <button id="subButton">-</button>
   <button id="calc">Calculate</button>
+  <button id="clear">Reset</button>
   </div>
       <script type="text/javascript" src="./main.js"></script>
   </body>
