--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
   </div>
 
   <div id="inputContainer">
-    <input type="number"/>
-    <input type="number"/>
+    Trial 1 <br>
+    <input type="number" placeholder="Treatment 1, Outcome 1"/><input type="number"/>
     <br>
-    <input type="number"/>
-    <input type="number"/>
+    <input type="number"/><input type="number"/>
   <br>
   </div>
   <div class="controls">
-  <button id="addButton">+</button>
-  <button id="subButton">-</button>
-  <button id="calc">Calculate</button>
-  <button id="clear">Reset</button>
+  <button id="addButton" title="Add 1 Table">+</button>
+  <button id="subButton" title="Remove 1 Table">-</button>
+  <button id="calc" title="Compute P-value">Calculate</button>
+  <button id="clear" title="Clear all inputs">Reset</button>
   </div>
       <script type="text/javascript" src="./main.js"></script>
   </body>
