--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 
   <div id="inputContainer">
     Trial 1 <br>
-    <input type="number" placeholder="Treatment 1, Outcome 1"/><input type="number"/>
+    <input type="number"/><input type="number"/><input type="number" placeholder="Total1A"/>
     <br>
-    <input type="number"/><input type="number"/>
+    <input type="number"/><input type="number"/><input type="number" placeholder="Total1B"/>
   <br>
   </div>
   <div class="controls">
   <button id="addButton" title="Add 1 Table">+</button>
   <button id="subButton" title="Remove 1 Table">-</button>
+  <button id="AutoFill" title="Fills third input given any other two">Autofill</button>
   <button id="calc" title="Compute P-value">Calculate</button>
-  <button id="clear" title="Clear all inputs">Reset</button>
+  <button id="clear" title="Clear all inputs">Clear</button>
   </div>
       <script type="text/javascript" src="./main.js"></script>
   </body>
