--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
   <div id="inputContainer">
     Trial 1 <br>
-    <input type="number"/><input type="number"/><input type="number" placeholder="Total1A"/>
+    <input type="number" placeholder="True1A"/><input type="number" placeholder="False1A"/><input type="number" placeholder="Total1A"/>
     <br>
-    <input type="number"/><input type="number"/><input type="number" placeholder="Total1B"/>
+    <input type="number" placeholder="True1B"/><input type="number" placeholder="False1B"/><input type="number" placeholder="Total1B"/>
   <br>
   </div>
   <div class="controls">
@@ -27,6 +27,9 @@
   <button id="calc" title="Compute P-value">Calculate</button>
   <button id="clear" title="Clear all inputs">Clear</button>
   </div>
+  <!-- to stop buttons grom covering iunputs -->
+  <br>  <br>  <br>  <br> 
+  <br>
       <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
