--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
   </div>
 
   <div id="inputContainer">
+    <table border="5">
+      <tr>
+          <th>Trial 1</th>
+          <th><input value="Outcome 1"/></th>
+          <th><input value="Outcome 2"/></th>
+          <th></th>
+      </tr>
+      <tr>
+          <td><input value="Treatment 1"/></td>
+          <td><input type="number"/></td>
+          <td><input type="number"/></td>
+          <td><input type="number"/></td>
+      </tr>
+      <tr>
+          <td><input value="Treatment 2"/></td>
+          <td><input type="number"/></td>
+          <td><input type="number"/></td>
+          <td><input type="number"/></td>
+      </tr>
+      <tr>
+          <td></td>
+          <td id="sum1a">0</td>
+          <td id="sum1b">0</td>
+          <td></td>
+      </tr>
+  </table>
     Trial 1 <br>
     <input type="number" placeholder="True1A"/><input type="number" placeholder="False1A"/><input type="number" placeholder="Total1A"/>
     <br>
