fixes + - autofill clear for table

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   </div>
 
   <div id="inputContainer">
-    <table border="5">
+    <table>
       <tr>
-          <th>Trial 1</th>
-          <th><input value="Outcome 1"/></th>
-          <th><input value="Outcome 2"/></th>
-          <th></th>
+          <td>Trial 1</td>
+          <td><input value="Outcome 1"/></td>
+          <td><input value="Outcome 2"/></td>
+          <td></td>
       </tr>
       <tr>
           <td><input value="Treatment 1"/></td>
@@ -40,11 +40,11 @@
           <td></td>
       </tr>
   </table>
-    Trial 1 <br>
+    <!-- Trial 1 <br>
     <input type="number" placeholder="True1A"/><input type="number" placeholder="False1A"/><input type="number" placeholder="Total1A"/>
     <br>
     <input type="number" placeholder="True1B"/><input type="number" placeholder="False1B"/><input type="number" placeholder="Total1B"/>
-  <br>
+  <br> -->
   </div>
   <div class="controls">
   <button id="addButton" title="Add 1 Table">+</button>
