better tables and trying to update

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   </div>
   <div class="controls">
   <button id="addButton" title="Add 1 Table">+</button>
-  <button id="subButton" title="Remove 1 Table">-</button>
+  <button id="subButton" title="Remove 1 Table">-</button><br>
   <button id="AutoFill" title="Fills third input given any other two">Autofill</button>
-  <button id="calc" title="Compute P-value">Calculate</button>
+  <button id="calc" title="Compute P-value">Calculate</button><br>
   <button id="clear" title="Clear all inputs">Clear</button>
   </div>
   <!-- to stop buttons grom covering iunputs -->
