better upates + History

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </tr>
       <tr>
           <td></td>
-          <td id="sum1a">0</td>
-          <td id="sum1b">0</td>
+          <td id="1D1">0</td>
+          <td id="1D2">0</td>
           <td></td>
       </tr>
   </table>
@@ -52,6 +52,10 @@
   <button id="AutoFill" title="Fills third input given any other two">Autofill</button>
   <button id="calc" title="Compute P-value">Calculate</button><br>
   <button id="clear" title="Clear all inputs">Clear</button>
+  <button id="recent" title="See past calculations">History</button>
+  </div>
+  <div id="history" class="history">
+    Recent Calculations
   </div>
   <!-- to stop buttons grom covering iunputs -->
   <br>  <br>  <br>  <br> 
