--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <td>Trial 1</td>
           <td><input value="Outcome 1"/></td>
           <td><input value="Outcome 2"/></td>
-          <td></td>
+          <td>Total</td>
       </tr>
       <tr>
           <td><input value="Treatment 1"/></td>
@@ -34,7 +34,7 @@
           <td><input type="number"/></td>
       </tr>
       <tr>
-          <td></td>
+          <td>Total</td>
           <td id="1D1">0</td>
           <td id="1D2">0</td>
           <td></td>
