lil file updates meeting

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1>Homepage</h1>
     <p>Available Tools</p>
 
-    <button class="button" onclick="window.location.href='pValcalc.html';">pVal Calc</button>
+    <button class="button" onclick="window.location.href='CMHcalc.html';">CMH Calculator</button>
 
 </body>
 </html>
