--- a/CMHcalc.html
+++ b/CMHcalc.html
@@ -29,15 +29,15 @@
       </tr>
       <tr>
           <td><input value="Treatment 1"/></td>
-          <td><input /></td>
-          <td><input /></td>
-          <td><input /></td>
+          <td id="1B1"><input /></td>
+          <td id="1B2"><input /></td>
+          <td id="1B3"><input /></td>
       </tr>
       <tr>
           <td><input value="Treatment 2"/></td>
-          <td><input /></td>
-          <td><input /></td>
-          <td><input /></td>
+          <td id="1C1"><input /></td>
+          <td id="1C2"><input /></td>
+          <td id="1C3"><input /></td>
       </tr>
       <tr>
           <td>Total</td>
@@ -58,15 +58,24 @@
 
   <div class="controls">
   <button id="addButton" title="Add 1 Table">+</button>
-  <button id="subButton" title="Remove 1 Table">-</button><br>
+  <button id="subButton" title="Remove 1 Table">-</button>
   <button id="AutoFill" title="Fills third input given any other two">Autofill</button>
-  <button id="calc" title="Compute P-value">Calculate</button><br>
+  <button id="calc" title="Compute P-value">QuickCalc</button>
+  <button id="calcPlus" title="Show Extra Information">Calculate</button>
   <button id="clear" title="Clear all inputs">Clear</button>
-  <button id="recent" title="See past calculations">History</button>
+  <!-- <button id="recent" title="See past calculations">History</button> -->
+  </div>
+
+  <div class="calcPopupOverlay"></div>
+  <div id="calcPopup" class="calcPopup">
+    <h2>Calculation Result</h2>
+    <div id="calcPopupContent" class="calcPopupContent">
+    
+  </div>
   </div>
   <!-- to stop buttons grom covering iunputs -->
   <br>  <br>  <br>  <br> 
   <br>
-      <script type="text/javascript" src="./main.js"></script>
+      <script type="text/javascript" src="./CMHcalc.js"></script>
   </body>
 </html>
