output file downlodble

--- a/CMHcalc.html
+++ b/CMHcalc.html
@@ -62,6 +62,7 @@
   <div class="calcPopupOverlay"></div>
   <div id="calcPopup" class="calcPopup">
     <h2>Calculation Result</h2>
+    <button onclick="downloadExcel()">Download Excel</button>
     <div id="calcPopupContent" class="calcPopupContent">
     
     </div>
