--- a/CMHcalc.html
+++ b/CMHcalc.html
@@ -76,6 +76,9 @@
   <button id="calcPlus" title="Show Extra Information">Calculate</button>
   <button id="clear" title="Clear all inputs">Clear</button>
   <input type="file" id="xInput"/>
+  <label for="xInput" id="custom-file-upload">
+    Upload File
+  </label>
   <!-- <button id="recent" title="See past calculations">History</button> -->
   </div>
 
