--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <p>Available Tools</p>
 
     <button class="button" onclick="window.location.href='CMHcalc.html';">CMH Calculator</button>
-
+    <button class="button" onclick="window.location.href='3dDistance.html';">Pairwise Distance Calculator</button>
 </body>
 </html>
