--- a/CMHcalc.html
+++ b/CMHcalc.html
@@ -13,6 +13,22 @@
     <!-- <div>
 
   </div> -->
+
+  <header>
+        <div class="header-content">
+            <div class="logo">CMH Calculator</div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <!-- <li><a href="#">Tools</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li> -->
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+
   <div class="flexParent" id="flexParent">
 
       <div id="history" class="history">
@@ -20,6 +36,10 @@
   <div id="recentCalcs"></div>
   </div>
 
+
+
+
+  </div>
   <div id="inputContainer">
     <table>
       <tr>
@@ -47,17 +67,27 @@
           <td id="1D3">0</td>
       </tr>
   </table>
+
+
+
     <!-- Trial 1 <br>
     <input type="number" placeholder="True1A"/><input type="number" placeholder="False1A"/><input type="number" placeholder="Total1A"/>
     <br>
     <input type="number" placeholder="True1B"/><input type="number" placeholder="False1B"/><input type="number" placeholder="Total1B"/>
   <br> -->
     </div>
+    <!-- <button id="addButton" title="Add 1 Table">+</button>
+  <button id="subButton" title="Remove 1 Table">-</button>
+  <button id="AutoFill" title="Fills third input given any other two">Autofill</button>
+  <button id="calc" title="Compute P-value">QuickCalc</button>
+  <button id="calcPlus" title="Show Extra Information">Calculate</button>
+  <button id="clear" title="Clear all inputs">Clear</button>
+  <input type="file" id="xInput"/>
+  <label for="xInput" id="custom-file-upload">
+    Upload File
+  </label> -->
 
-
-  </div>
-
-
+</main>
 
   <div class="calcPopupOverlay"></div>
   <div id="calcPopup" class="calcPopup">
@@ -82,9 +112,23 @@
   <!-- <button id="recent" title="See past calculations">History</button> -->
   </div>
 
-  <!-- to stop buttons grom covering iunputs -->
+  <!-- to stop buttons grom covering iunputs
   <br>  <br>  <br>  <br> 
-  <br>
+  <br> -->
+
+  <!-- <footer>
+        <div class="footer-content">
+            <div class="footer-links">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Support</a>
+            </div>
+
+        </div>
+    </footer> -->
+
+
       <script type="text/javascript" src="./CMHcalc.js"></script>
   </body>
 </html>
