--- a/3dDistance.html
+++ b/3dDistance.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
 
-    <!-- <link rel="stylesheet" href="style.css"> -->
   </head>
-  <body>
+  <script src="./3dDistance.js" type="module"></script>
+  <body >
+    
     <h4>Upload file with points</h4>
 
 User Guide: <br> 
@@ -22,7 +24,18 @@ e.g "H 1 2 3" is point (1,2,3). Same for "daadadada qwerty 1 2 3"
 Alternative Text Input <textarea id="textInput"></textarea> <button id="textInputButton">Evaluate Text Input</button>
 <h5>Results</h5>
 <div id="results"></div>
-  </body>
-            <script src="./3dDistance.js"></script>
+<canvas id="bg"></canvas>
 
+  </body>
+            
+
+            <style>
+#bg {
+    display: block;
+    width: 100%;
+    height: 500px; /* Fixed height after text */
+    margin-top: 20px;
+    border: 1px solid #444;
+}
+            </style>
   </html>
