--- a/3dDistance.html
+++ b/3dDistance.html
@@ -32,10 +32,13 @@ Alternative Text Input <textarea id="textInput"></textarea> <button id="textInpu
             <style>
 #bg {
     display: block;
-    width: 100%;
-    height: 500px; /* Fixed height after text */
-    margin-top: 20px;
+    width: 98vw;
+    max-width: 100%;    /* Added: ensures it stays within the screen */
+    height: 50vh;       /* Changed: Use vh (viewport height) or a % so height scales too */
+    min-height: 300px;  /* Optional: keeps it from getting too tiny */
+    margin: 20px auto;
     border: 1px solid #444;
 }
+
             </style>
   </html>
